[package]
name = "rustybutt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0" # the irc crate – usable, async IRC for Rust
futures = "0.3.19" # An implementation of futures and streams featuring zero allocations, composability, and itera…
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
failure = "0.1.8"
hyphenation = { version = "0.8.4", features = ["embed_all"] }
rand = "0.8.4" # Random number generators and other randomness functionality.
